# django-media-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
media_server/: manage.py
media_server/media_server/: asgi.py  settings.py  urls.py  wsgi.py
media_server/music/: views.py
