[tool.poetry]
name = "media_server"
version = "0.1.0"
description = ""
authors = ["Jack Gumoes <j.gumoes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
mypy = "^0.991"
black = {version = "^22.10.0", allow-prereleases = true}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
